# seed4d

./: CLAUDE.md  Dockerfile  README.md  conftest.py  generator.py  main.py  pyproject.toml
benchmarks/: OPTIMIZATIONS.md  bench_offline.py  instrument.py
common/: config.py  environment.py  generate_traffic.py  mask.py  parser.py  plot.py  pose.py  sensor.py  vehicle.py
config/: cloner.py  driving.yaml  dynamic.yaml  invisible.yaml  kitti360.yaml  static.yaml  waymo.yaml
docs/: carla_check.md  datasets.md  visualizations.md
docs/plans/: 2026-03-03-random-camera-configs.md  2026-03-04-webui-design.md  2026-03-04-webui-implementation.md
tests/: mock_carla.py  test_camera_intrinsics.py  test_config.py  test_pose.py  test_random_camera_config.py  test_random_scenario_configs.py
tests/webui/: test_configs_api.py  test_datasets_api.py  test_integration.py  test_jobs_api.py  test_references_api.py
utils/: batcherize_config.py  check_dataset.py  converter.py  generate_camera_config.py  generate_map.py  generate_masks.py  generate_multiple_configs.py  generate_normalized_coordinates.py  generate_pointcloud.py  generate_random_camera_config.py  generate_random_config.py  generate_random_scenario_configs.py  generate_single_transforms.py  meta_generator.py  run_multiple_configs.py  split_camera_configs.py  split_dataset.py
viz/: get_point_cloud.py  vis_all_sensors.py  vis_ego_exo_views.py  vis_gifs.py  vis_lidar.py  vis_timesteps.py
webui/: dev.sh
webui/backend/: database.py  main.py  models.py  requirements.txt
webui/backend/api/: configs.py  datasets.py  jobs.py  references.py
webui/backend/services/: job_runner.py
webui/frontend/: package-lock.json  package.json
webui/frontend/src/: App.tsx  api.ts  types.ts
webui/frontend/src/components/: DataViewer3D.tsx  ScenePreview.tsx
webui/frontend/src/pages/: ConfigBuilder.tsx  DataViewer.tsx  JobMonitor.tsx
webui/frontend/src/store/: configStore.ts  toastStore.ts
