[project]
name = "seed4d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "carla==0.9.16",
    "jupyterlab",
    "matplotlib",
    "opencv-python",
    "pydantic>=2.0",
    "scikit-image",
    "pandas",
    "tqdm",
    "pypng",
    "open3d",
    "tabulate",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "ruff",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B905",  # zip-strict (not always wanted)
]

[tool.ruff.lint.isort]
known-first-party = ["common", "utils"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
